<resources>
    <string name="app_name">TickTick</string>

    <string name="iv_menu_content_description">Menu Button</string>
    <string name="iv_more_description">More Options Button</string>
    <string name="tv_inbox_name_default">Inbox</string>
    <string name="tv_task_title_default">TASK_TITLE</string>
    <string name="tv_task_description_default">TASK_DESCRIPTION</string>
    <string name="tv_create_task_activity">What Would You Like To Do</string>
    <string name="tv_create_list">Create New List</string>
    <string name="tv_create_task_description">Description</string>
    <string name="tv_create_task_category">Category</string>
    <string name="addTaskButtonDescription">Add Task Button</string>
    <string name="btn_landing">Let\'s Create Task</string>
    <string name="add">Add New List</string>
    <string name="today">Today</string>
    <string name="inbox">Inbox</string>
    <string name="user_name">User Mock</string>
</resources>