<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cViewCrtTaskDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    app:cardBackgroundColor="@color/dialog_box_bg_color"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:id="@+id/linearLayoutCrtTaskDialog"
        android:layout_width="268dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activityTextView"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tv_create_task_activity"
            android:inputType="text"
            android:textColorHint="#66E6E0E9" />

        <EditText
            android:id="@+id/mLineDescTextView"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/tv_create_task_description"
            android:inputType="textMultiLine"
            android:textColorHint="#66E6E0E9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryTV"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:textColorHint="#66E6E0E9"
                app:boxStrokeColor="@color/selector"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/text_hint_color"
                app:startIconDrawable="@drawable/search"
                app:startIconTint="@color/icon_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:hint="@string/tv_create_task_category"
                    android:padding="10dp"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/calendarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/calendar" />

            <ImageView
                android:id="@+id/okBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/ok_btn" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>